[package]
name = "currencies"
version = "0.1.0"
authors = ["João Oliveira <hello@jxs.pt>"]
edition = "2018"

[dependencies]
askama = "0.8"
hyper = "0.13"
warp = "0.2"
hyper-rustls = "0.19"
serde-xml-rs = "0.3.1"
tokio = { version = "1.8.4", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
log = "0.4"
env_logger = "0.7"
bincode = "1.2"
chrono = "0.4"
exitfailure = "0.5"
serde_json = "1.0"
sled = "0.28"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.1.0"

