[package]
name = "currencies"
version = "0.1.0"
authors = ["João Oliveira <hello@jxs.pt>"]
edition = "2018"

[dependencies]
askama = "0.11.1"
hyper = "0.14.19"
warp = "0.3.2"
hyper-rustls = { version = "0.23.0", features = ["webpki-roots"] }
serde-xml-rs = "0.5.1"
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
futures = "0.3.21"
log = "0.4.17"
env_logger = "0.9.0"
bincode = "1.3.3"
chrono = "0.4.19"
exitfailure = "0.5.1"
serde_json = "1.0.81"
sled = "0.34.7"
thiserror = "1.0.31"
tokio-stream = "0.1.9"

[dev-dependencies]
tempfile = "3.3.0"

